--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -92,6 +92,10 @@ a {
         justify-content: space-around;
     }
 
+    &.Align-Left {
+        justify-content: start;
+    }
+
     &.Align-Right {
         justify-content: flex-end;
     }
