--- a/client/src/components/indicators/Task/Task.module.scss
+++ b/client/src/components/indicators/Task/Task.module.scss
@@ -22,7 +22,7 @@
 }
 
 .titleContainer {
-  font-size: v.$font-m;
+  font-size: v.$font-s;
   text-overflow: ellipsis;
   overflow: hidden;
   font-weight: 550;
