fix: currentProgress changes when it shouldn't feat: added ability to remove task without triggering whole category to animate

--- a/client/src/components/indicators/Task/Task.module.scss
+++ b/client/src/components/indicators/Task/Task.module.scss
@@ -12,7 +12,11 @@
   gap: 6px;
   cursor: pointer;
   box-sizing: border-box;
-  opacity: 0;
+  opacity: 1;
+
+  order: 1;
+  overflow: hidden;
+  flex-shrink: 0;
 }
 
 .topLine {
@@ -46,10 +50,6 @@
 
 .streakContainer {
   display: inline-block;
-}
-
-.completed {
-  order: 1;
 }
 
 .task {
