feat: add current progress to task view feat: make collapsed height for minipages dynamic

--- a/client/src/components/containers/MiniPagesContainer/MiniPageContainer.module.scss
+++ b/client/src/components/containers/MiniPagesContainer/MiniPageContainer.module.scss
@@ -4,10 +4,9 @@
   .container {
     border-top: v.$base-border;
     width: 100%;
-    height: calc(100% - 4em - 12px);
-    bottom: calc(4em + 12px);
-    min-height: 25%;
-    max-height: calc(100% - 4em - 12px);
+    height: calc(100% - 4.5em);
+    bottom: 4.5em;
+    max-height: calc(100% - 4.5em);
     border-radius: 10px 10px 0 0;
   }
 }
