fix: number task indicators are displaying wrong

--- a/client/src/components/indicators/Task/Task.module.scss
+++ b/client/src/components/indicators/Task/Task.module.scss
@@ -83,7 +83,7 @@
     display: inline-flex;
     align-items: center;
     gap: 0.5em;
-    width: 14%;
+    // width: 14%;
 
     &.repeatSeparator {
       text-align: center;
