--- a/client/src/pages/NewTask/NewTask.module.scss
+++ b/client/src/pages/NewTask/NewTask.module.scss
@@ -1,27 +1,19 @@
 @use "@/styles/index";
 @use "@/styles/variables" as v;
 
-.titleMedium {
-  opacity: v.$opacity-very-low;
-  width: 100%;
-  display: grid;
-  grid-template-columns: calc(45% - 0.5em) 55%;
-  grid-template-rows: repeat(auto-fill, auto);
-  grid-row-gap: 0;
-  grid-column-gap: 0.5em;
+.categoryChipColor {
+  width: 0.5em;
+  height: 0.5em;
+  border-radius: 0.5em;
+  flex-shrink: 0;
+}
 
-  > div {
+.categoryOption {
+  @extend .Horizontal-Flex-Container;
+
+  & > span {
     text-overflow: ellipsis;
     overflow-x: hidden;
     white-space: nowrap;
-    display: inline-flex;
-    align-items: center;
-    gap: 0.5em;
   }
-}
-
-.headerLeftSide {
-  @extend .Stack-Container;
-  width: 100%;
-  gap: 5px;
 }
