--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -44,9 +44,9 @@ body {
     position: relative;
 }
 
-* {
-    transition: background-color 0.2s;
-}
+// * {
+//     transition: background-color 0.2s;
+// }
 
 a {
     &:link {
