--- a/client/src/styles/variables.scss
+++ b/client/src/styles/variables.scss
@@ -62,6 +62,9 @@ $theme: 'light';
 $base-padding: 6px 12px;
 $symmetrical-padding: 10px;
 $big-padding: 40px 80px;
+$button-padding: 10px 24px;
+$small-button-padding: 8px 19px;
+
 $base-margin: 0.75rem;
 
 $small-gap: 5px;
