--- a/client/src/components/utilities/TaskList/TaskList.module.scss
+++ b/client/src/components/utilities/TaskList/TaskList.module.scss
@@ -23,11 +23,14 @@
     flex-direction: column-reverse;
     // width: calc(22.15em + 20px);
     // min-width: calc(22.15em + 20px);
+    width: 100%;
   }
 
   .leftSide {
+
+
     width: 100%;
-    padding: 0.5em 4px 0.5em 10px;
+    padding: 0.5em 10px 0.5em 10px;
   }
 }
 
@@ -51,7 +54,6 @@
   @extend .Horizontal-Flex-Container;
   overflow: hidden;
   padding-top: 0.5em;
-  padding-top: 0.5em;
   gap: 0;
   align-items: flex-start;
 }
@@ -62,6 +64,10 @@
   overflow-x: hidden;
   flex-grow: 1;
   box-sizing: border-box;
+
+  &::-webkit-scrollbar {
+    width: 0;
+  }
 
   &::-webkit-scrollbar-thumb {
     background-color: var(--background-color);
@@ -119,4 +125,13 @@
 .subCategoryContainer {
   @extend .Horizontal-Flex-Container;
   // overflow: hidden;
+}
+
+.appBar {
+  padding: 8px 4px;
+  width: 100%;
+  box-sizing: border-box;
+
+  // background-color: var(--surface-color);
+  border-bottom: v.$base-border;
 }
