--- a/client/src/components/utilities/TaskList/TaskList.module.scss
+++ b/client/src/components/utilities/TaskList/TaskList.module.scss
@@ -127,6 +127,33 @@
   // overflow: hidden;
 }
 
+.subCategoryContainerVertical {
+  margin-left: 14px;
+}
+
+.categoryChipsContainer {
+  @extend .Horizontal-Flex-Container;
+  overflow: hidden;
+  max-width: 100%;
+}
+
+.subcategoryChips {
+  @extend .Horizontal-Flex-Container;
+  overflow: auto;
+
+  &::-webkit-scrollbar {
+    width: 0;
+    height: 0;
+  }
+}
+
+.divider {
+  height: 1em;
+  width: 2px;
+  background-color: var(--border-primary-color);
+  flex-shrink: 0;
+}
+
 .appBar {
   padding: 8px 4px;
   width: 100%;
@@ -134,4 +161,99 @@
 
   // background-color: var(--surface-color);
   border-bottom: v.$base-border;
+}
+
+.searchIndicatorBar {
+  width: 100%;
+
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+
+  opacity: v.$opacity-very-low;
+}
+
+.chevronContainer {
+  font-size: 1.75em;
+  height: 0.25em;
+  transform: translateY(-0.3em);
+}
+
+.searchContainer {
+  width: 100%;
+  height: 0;
+  position: fixed;
+  top: 0;
+  padding-top: 5em;
+  padding-bottom: 1em;
+  box-sizing: border-box;
+  
+  display: flex;
+  justify-content: center;
+  z-index: 6;
+
+  background-color: transparent;
+  transition: background-color 0.2s ease-in-out;
+
+  &.isExpanded {
+    background-color: var(--background-color);
+    height: 100%;
+  }
+}
+
+.searchBar {
+  @extend .Horizontal-Flex-Container;
+
+  background-color: var(--surface-color);
+  border: v.$base-border;
+  border-radius: v.$button-border-radius;
+  padding: v.$button-padding;
+  box-shadow: v.$elevation-1;
+  font-size: v.$font-xl;
+  width: 70%;
+  
+  height: min-content;
+  position: absolute;
+
+  // To animate later (maximum drag values)
+  opacity: 0.99;
+  top: 0.99em;
+
+  & > :first-child {
+    opacity: v.$opacity-low;
+  }
+
+  & > input {
+    font-size: v.$font-m;
+    flex-grow: 1;
+    opacity: v.$opacity-medium;
+  }
+}
+
+.searchScreenBody {
+  @extend .Stack-Container, .Centered;
+  width: 100%;
+  box-sizing: border-box;
+}
+
+.filterContainer {
+  width: 100%;
+  padding: 20px;
+  box-sizing: border-box;
+  flex-grow: 1;
+  overflow-y: auto;
+}
+
+.filterLabel {
+  @extend .Label;
+  margin-bottom: 10px;
+}
+
+.categoryFilters {
+  max-width: 100%;
+
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  gap: 10px;
 }
