--- a/client/src/styles/variables.scss
+++ b/client/src/styles/variables.scss
@@ -96,6 +96,7 @@ $font-weight-medium: 500;
 $elevation-1: 0px 1px 2px rgba(0, 0, 0, 0.3), 0px 1px 3px 1px rgba(0, 0, 0, 0.15);
 
 // opacity
+$opacity-medium: 0.87;
 $opacity-low: 0.6;
 $opacity-very-low: 0.38;
 
