--- a/client/src/components/buttons/Chip/Chip.module.scss
+++ b/client/src/components/buttons/Chip/Chip.module.scss
@@ -16,11 +16,6 @@
         justify-content: flex-start;
     }
 
-    &.selected {
-        background-color: var(--primary-color);
-        color: var(--on-primary-color);
-    }
-
     &.round {
         border-radius: v.$button-border-radius;
     }
@@ -28,7 +23,8 @@
     &.filled {
         background-color: var(--primary-color);
         color: var(--on-primary-color);
-        border: none;
+        border: v.$base-border;
+        border-color: transparent;
     }
 
     .children {
