--- a/client/src/components/indicators/Task/Task.module.scss
+++ b/client/src/components/indicators/Task/Task.module.scss
@@ -94,6 +94,18 @@
 
 .tasksContainer {
   @extend .Stack-Container;
+  
+  gap: 0;
 
-  gap: 12px;
+  & > *:not(:last-child):not(:first-child) {
+    margin: 6px 0;
+  }
+
+  & > *:first-child:not(:only-child) {
+    margin-bottom: 6px;
+  }
+
+  & > *:last-child:not(:only-child)  {
+    margin-top: 6px;
+  }
 }
