feat: optimise task component feat: add collapse button to task categories

--- a/client/src/components/buttons/IconButton/IconButton.module.scss
+++ b/client/src/components/buttons/IconButton/IconButton.module.scss
@@ -18,6 +18,13 @@
   min-height: 1.5em;
   padding: 0;
 
+  &.noPadding {
+    width: auto;
+    height: auto;
+    min-width: unset;
+    min-height: unset;
+  }
+
   &.selected {
     opacity: 1;
   }
