--- a/client/src/styles/variables.scss
+++ b/client/src/styles/variables.scss
@@ -58,6 +58,14 @@ $theme: 'light';
     }
 }
 
+$light-mode-background: #F9FBFC;
+$light-mode-surface: #ffffff;
+$light-mode-border-primary: #E2E6EB;
+
+$dark-mode-background: #191919;
+$dark-mode-surface: #202020;
+$dark-mode-border-primary: #2f2f2f;
+
 // spacing
 $base-padding: 6px 12px;
 $symmetrical-padding: 10px;
